Cleaned build gradle